--- a/2_0/CMakeLists.txt
+++ b/2_0/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 3.5)
 
 project(test)
 
-add_executable()
+add_executable(test test.cpp)
+
+add_executable(VariadicTemplates VariadicTemplates.cpp)
