--- a/2_0/CMakeLists.txt
+++ b/2_0/CMakeLists.txt
@@ -5,3 +5,5 @@ project(test)
 add_executable(test test.cpp)
 
 add_executable(VariadicTemplates VariadicTemplates.cpp)
+
+add_executable(initializer_list_ initializer_list_.cpp)
