--- a/2_0/CMakeLists.txt
+++ b/2_0/CMakeLists.txt
@@ -7,3 +7,5 @@ add_executable(test test.cpp)
 add_executable(VariadicTemplates VariadicTemplates.cpp)
 
 add_executable(initializer_list_ initializer_list_.cpp)
+
+add_executable(explicit_ explicit_.cpp)
