--- a/peng/RAII_pointer/CMakeLists.txt
+++ b/peng/RAII_pointer/CMakeLists.txt
@@ -9,3 +9,7 @@ add_executable(vector_test vector_test.cpp)
 add_executable(raii_test raii_test.cpp)
 
 add_executable(constructor constructor.cpp)
+
+add_executable(smartpoint smartpoint.cpp)
+
+add_executable(test test.cpp)
