--- a/peng/RAII_pointer/CMakeLists.txt
+++ b/peng/RAII_pointer/CMakeLists.txt
@@ -1,8 +1,3 @@
-cmake_minimum_required(VERSION 3.5)
-
-set(CMAKE_CXX_STANDARD 14)
-
-project(RAII_pointer)
 
 add_executable(vector_test vector_test.cpp)
 
@@ -12,4 +7,4 @@ add_executable(constructor constructor.cpp)
 
 add_executable(smartpoint smartpoint.cpp)
 
-add_executable(test test.cpp)
+add_executable(RAII_pointer_test test.cpp)
