--- a/c++primer/stl/algorithm_/CMakeLists.txt
+++ b/c++primer/stl/algorithm_/CMakeLists.txt
@@ -1,4 +1,7 @@
-
 add_executable(stl_algorithm_minmax_element minmax_element.cpp)
+
+add_executable(stl_algorithm_accumlate_test accumlate_test.cpp)
+
+add_executable(stl_algorithm_adjacent_difference_test adjacent_difference_test.cpp)
 
 
