--- a/c++primer/stl/vector_/CMakeLists.txt
+++ b/c++primer/stl/vector_/CMakeLists.txt
@@ -1,4 +1,6 @@
 
-add_executable(stl_vector_test test1.cpp)
+add_executable(vector_00 vector_00.cpp)
 
+add_executable(vector_value_type vector_value_type.cpp)
 
+add_executable(vector_allocator vector_allocator.cpp)
