--- a/c++primer/stl/vector_/CMakeLists.txt
+++ b/c++primer/stl/vector_/CMakeLists.txt
@@ -4,3 +4,5 @@ add_executable(vector_00 vector_00.cpp)
 add_executable(vector_value_type vector_value_type.cpp)
 
 add_executable(vector_allocator vector_allocator.cpp)
+
+add_executable(vector_emplace_push vector_emplace_push.cpp)
