--- a/peng/CMakeLists.txt
+++ b/peng/CMakeLists.txt
@@ -3,3 +3,9 @@ add_subdirectory(mul_thread)
 add_subdirectory(RAII_pointer)
 
 add_subdirectory(modern_c++)
+
+add_subdirectory(function)
+
+add_subdirectory(SIMD)
+
+add_subdirectory(memory)
