--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,7 @@ add_subdirectory(learn_gdb)
 add_subdirectory(os)
 
 add_subdirectory(peng)
+
+add_subdirectory(tinySTL)
+
+add_subdirectory(DataStructure)
