--- a/tinySTL/CMakeLists.txt
+++ b/tinySTL/CMakeLists.txt
@@ -11,6 +11,6 @@ add_executable(test2 test/test2.cpp)
 
 add_executable(test4 test/test4.cpp)
 
-add_executable(tinySTL_vector_test test/vector_test.cpp)
+#add_executable(tinySTL_vector_test test/vector_test.cpp)
 
 add_executable(tinySTL_deque_test test/deque_test.cpp)
