--- a/peng/RAII_pointer/CMakeLists.txt
+++ b/peng/RAII_pointer/CMakeLists.txt
@@ -1,10 +1,16 @@
 
-add_executable(vector_test vector_test.cpp)
+add_executable(peng_vector_test vector_test.cpp)
 
-add_executable(raii_test raii_test.cpp)
+add_executable(peng_RAII RAII.cpp)
 
-add_executable(constructor constructor.cpp)
+add_executable(peng_constructor constructor.cpp)
 
-add_executable(smartpoint smartpoint.cpp)
+add_executable(peng_smartpoint smartpoint.cpp)
 
-add_executable(RAII_pointer_test test.cpp)
+add_executable(peng_RAII_pointer_test test.cpp)
+
+add_executable(peng_new_delete new_delete.cpp)
+
+add_executable(peng_malloc_free malloc_free.cpp)
+
+add_executable(peng_slef_sharedptr slef_sharedptr.cpp)
